web-infras/parser/tests/fixtures/babel/core/uncategorised/513/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,24)
1|"use strict"; function static() { }
 |                      ^
[SyntaxError]: unexpect keyword in strict mode (1,24)
1|"use strict"; function static() { }
 |                      ^
[SyntaxError]: unexpect keyword in strict mode (1,24)
1|"use strict"; function static() { }
 |                      ^
